--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ background: #2c2c2c;
   display: inline-block;
 }
 .section1 .img {
-  background-image: url("../img/img-slider-decor.jpeg");
+  background-image: url("./img/img-slider-decor.jpeg");
   width: 65vw;
   height: 85vh;
   background-repeat: no-repeat;
@@ -382,7 +382,7 @@ background: #2c2c2c;
   width:40vw;
   height:40vw;
   transform: scale(1);
-  background-image: url("../img/section3/box1.jpg");
+  background-image: url("./img/section3/box1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -449,10 +449,10 @@ width:47vw;
 position:relative;
 }
 .section3 .box2 .box2_1 .img{
-  background-image: url("../img/section3/box2.1.jpg");
+  background-image: url("./img/section3/box2.1.jpg");
 }
 .section3 .box2 .box2_2 .img{
-  background-image: url("../img/section3/box2.2.jpg");
+  background-image: url("./img/section3/box2.2.jpg");
 }
 .section3 .box2 .box2_2{
   margin:.5vw 0 .5vw 0 ;
@@ -560,7 +560,7 @@ position:relative;
 .section5 .box1 .img{
   width:100%;
   height:35vw;
-  background-image: url("../img/section5/img-decor-3cn6.jpg.webp");
+  background-image: url("./img/section5/img-decor-3cn6.jpg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -628,7 +628,7 @@ position:relative;
 .section5 .vintage_lamp .vl_max .vl_img{
   height:98%;
   width:80px;
-  background-image: url("../img/section4/lamp-352x474.jpg");
+  background-image: url("./img/section4/lamp-352x474.jpg");
   background-size: cover;
 }
 .section5 .vintage_lamp .vl_max .vl_txt{
@@ -1044,7 +1044,7 @@ width:23px;
 .contact_section1 .s1_contact_img{
   height:500px;
   width:711px;
-  background-image: url("../img/contact_us/contact-us-v4.png");
+  background-image: url("./img/contact_us/contact-us-v4.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
